--- a/teachers/templates/parents/delete_parent.html
+++ b/teachers/templates/parents/delete_parent.html
@@ -1,10 +1,19 @@
 {% extends "dashboard/dashboard.html" %}
 {% load static %}
 
-{% block title %} delete Parent {% endblock  %}
 
+{% extends "base_delete_confirmation.html" %}
 
 {% block content %}
+    {% with "Parent" as item_type parent.first_name as item_name %}
+        {{ block.super }}
+    {% endwith %}
+{% endblock %}
+
+{% comment %} {% block title %} delete Parent {% endblock  %} {% endcomment %}
+
+
+{% comment %} {% block content %}
     <h1> Delete Item</h1>
     <p>Are you sure you want to delete  "<span class="text_danger">{{ parent.first_name }}</span>"</p>
 
@@ -13,4 +22,4 @@
 
         <button type="submit" class="btn_danger">Yes , Delete</button>
     </form>
-{% endblock %}
+{% endblock %} {% endcomment %}
