style login page and add a parent app in the system

--- a/authuser/templates/dashboard/asidenavbar.html
+++ b/authuser/templates/dashboard/asidenavbar.html
@@ -82,7 +82,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="{% url 'child_infor' %}">
                         <i class="fas fa-child"></i>
                         <span>Child Profile</span>
                     </a>
