--- a/staticfiles/css/_global.scss
+++ b/staticfiles/css/_global.scss
@@ -40,12 +40,6 @@ body{
             background-color: $warning-color;
             color: $warning-color;
         }
-
-        // &.info {
-        //     background-color: $info-bg;
-        //     color: $info-text;
-        //     border-color: $info-border;
-        // }
     }
 }
 
@@ -53,8 +47,41 @@ body{
     color: $danger-color;
 }
 
+.text_success{
+    color: $success-color;
+}
+
+.text_warning{
+    color: $warning-color;
+}
+
+.default {
+    color: gray;
+}
+
 .btn_danger{
     background: $danger-color;
     color: $primary-color;
     font-size: 1.1em;
+}
+
+.child_infor{
+    @include grid(2);
+    padding:1.2em 0;
+
+    p{
+        font-size: 1.1em;
+        padding: 0.4em 0;
+
+        span{
+            padding: 0 0.5em;
+            font-weight: 550;
+        }
+    }
+
+}
+
+.login_container{
+    @include flex_center;
+    color: blue;
 }
