--- a/core/static/css/_global.scss
+++ b/core/static/css/_global.scss
@@ -64,3 +64,25 @@ body{
     color: $primary-color;
     font-size: 1.1em;
 }
+
+.child_infor{
+    @include grid(2);
+    padding:1.2em 0;
+
+    p{
+        font-size: 1.1em;
+        padding: 0.4em 0;
+
+        span{
+            padding: 0 0.5em;
+            font-weight: 550;
+        }
+    }
+}
+
+
+.login_container{
+    @include flex_center;
+    flex-direction: column;
+    min-height: 100vh;    
+}
