--- a/staticfiles/css/_global.scss
+++ b/staticfiles/css/_global.scss
@@ -78,10 +78,11 @@ body{
             font-weight: 550;
         }
     }
-
 }
+
 
 .login_container{
     @include flex_center;
-    color: blue;
+    flex-direction: column;
+    min-height: 100vh;    
 }
