--- a/teachers/templates/enrollment/delete_enrollment.html
+++ b/teachers/templates/enrollment/delete_enrollment.html
@@ -1,8 +1,6 @@
-{% extends "dashboard/dashboard.html" %}
+{% extends "delete_confirm.html" %}
 {% load static %}
 
-
-{% extends "base_delete_confirmation.html" %}
 
 {% block content %}
     {% with "Enrollment" as item_type parent.first_name as item_name %}
