--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -85,7 +85,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: blue;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 form input,
