--- a/authuser/templates/dashboard/asidenavbar.html
+++ b/authuser/templates/dashboard/asidenavbar.html
@@ -17,13 +17,6 @@
                     </a>
                 </li>
 
-                {% comment %} <li>
-                    <a href="{% url 'parents' %}">
-                        <i class="fas fa-user-plus"></i>
-                        <span>Parent</span>
-                    </a>
-                </li> {% endcomment %}
-
                 <li>
                     <a href="{% url 'enroll' %}">
                         <i class="fas fa-user-plus"></i>
@@ -59,13 +52,6 @@
                     </a>
                 </li>
 
-                {% comment %} <li>
-                    <a href="#">
-                        <i class="fas fa-calendar-day"></i>
-                        <span>Daily Record</span>
-                    </a>
-                </li> {% endcomment %}
-
                 <li>
                     <a href="{%  url 'incident' %}">
                         <i class="fas fa-clipboard-list"></i>
@@ -89,7 +75,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="{% url 'child_attendance' %}">
                         <i class="fas fa-check-circle"></i>
                         <span>Attendance</span>
                     </a>
@@ -110,7 +96,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="{% url 'child_incident' %}">
                         <i class="fas fa-clipboard-list"></i>
                         <span>Incident Rports</span>
                     </a>
