Update the payment to ensure there are no broken links

--- a/authuser/templates/dashboard/asidenavbar.html
+++ b/authuser/templates/dashboard/asidenavbar.html
@@ -30,27 +30,27 @@
                         <span>Attendance</span>
                     </a>
                 </li>
-
-                <li>
+ 
+                {% comment %} <li>
                     <a href="#">
                         <i class="fas fa-child"></i>
                         <span>Children</span>
                     </a>
-                </li>
+                </li> {% endcomment %}
 
-                <li>
+                {% comment %} <li>
                     <a href="#">
                         <i class="fas fa-file"></i>
                         <span>Reports</span>
                     </a>
-                </li>
+                </li> {% endcomment %}
 
                 <li>
                     <a href="#">
                         <i class="fas fa-comment-dots"></i>
                         <span>Schedules</span>
                     </a>
-                </li>
+                </li> 
 
                 <li>
                     <a href="{%  url 'incident' %}">
